<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/display_setting_header">

    <com.android.settingslib.widget.LayoutPreference
        android:key="color_mode_preview"
        android:layout="@layout/color_mode_preview"
        android:selectable="false" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/cm_display_header">

        <SwitchPreference app:key="switchCreatorMode"
                          app:iconSpaceReserved="false"
                          app:title="@string/cm_switch_title"
                          app:summary="@string/cm_switch_description"
        />
    </PreferenceCategory>

</PreferenceScreen>